--- a/signup.html
+++ b/signup.html
@@ -55,8 +55,8 @@
  
 
     
-    <button class="btn btn-lg btn-warning" type="submit">Sign in</button>
-    <p class="mt-5 mb-3 text-body-secondary">&copy; Newsletter</p>
+    <button class="btn btn-lg btn-warning" type="submit">Sign Up</button>
+    <p class="mt-5 mb-3 text-body-secondary cpyrt">&copy; Newsletter</p>
   </form>
   
 
