--- a/signup.html
+++ b/signup.html
@@ -44,7 +44,7 @@
 
   <form  action="/" class="w-100 m-auto form-signup" method="POST">
     <img src="images/undraw_team_up_re_84ok.svg" width="120" height="100" alt="">
-    <h1 class="h3 mb- fw-normal">Signup to my Newsletter </h1><br><br>
+    <h1 class="h3 mb- fw-normal">Signup to my Newsletter </h1>
 
       <input type="text" class="form-control first" name="fName" placeholder="first name">
       <input type="text" class="form-control last" name="lName" placeholder="last name">
